// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index chdir 1`] = `
"

  index
    ✓ works


  1 passing

----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |     100 |      100 |     100 |     100 |                   
 index.js |     100 |      100 |     100 |     100 |                   
----------|---------|----------|---------|---------|-------------------"
`;

exports[`index js 1`] = `
"

  index
    ✓ works


  1 passing

----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |     100 |      100 |     100 |     100 |                   
 index.js |     100 |      100 |     100 |     100 |                   
----------|---------|----------|---------|---------|-------------------"
`;

exports[`index multiple tests 1`] = `
"

  index
    ✓ test1
    ✓ test2


  2 passing

----------|---------|----------|---------|---------|-------------------
File      | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------|---------|----------|---------|---------|-------------------
All files |     100 |      100 |     100 |     100 |                   
 model    |     100 |      100 |     100 |     100 |                   
  test.js |     100 |      100 |     100 |     100 |                   
 pages    |     100 |      100 |     100 |     100 |                   
  1.js    |     100 |      100 |     100 |     100 |                   
  2.js    |     100 |      100 |     100 |     100 |                   
----------|---------|----------|---------|---------|-------------------"
`;

exports[`index sass 1`] = `
"

  index
    ✓ works


  1 passing

------------|---------|----------|---------|---------|-------------------
File        | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
------------|---------|----------|---------|---------|-------------------
All files   |   70.83 |      100 |     100 |   70.83 |                   
 style.scss |   70.83 |      100 |     100 |   70.83 | 15-20,23          
------------|---------|----------|---------|---------|-------------------"
`;

exports[`index vue 1`] = `
"

  index
    ✓ works


  1 passing

-----------|---------|----------|---------|---------|-------------------
File       | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-----------|---------|----------|---------|---------|-------------------
All files  |   88.88 |      100 |     100 |   88.88 |                   
 index.vue |   88.88 |      100 |     100 |   88.88 | 4                 
-----------|---------|----------|---------|---------|-------------------"
`;
